...
        >
          <Pressable 
            style={styles.modalView}
            onPress={(e) => e.stopPropagation()}
          >
            <Text style={styles.modalHeaderText}>
              Patients Daily Highlights
            </Text>
            <Pressable
              style={styles.buttonClose}
              onPress={closeModal}
              testID="highlightsCloseButton"
            >
              <MaterialCommunityIcons
                name="close"
                size={Platform.OS === 'web' ? 42 : 20}
              />
            </Pressable>
...
